@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration>
+<configuration scan="true" scanPeriod="30 seconds">
 
 	<conversionRule conversionWord="meshName" converterClass="com.gentics.mesh.log.MeshLogNameConverter"/>
 	<statusListener class="ch.qos.logback.core.status.NopStatusListener" />
@@ -22,11 +22,8 @@
 		</encoder>
 	</appender>
 
-	<logger name="org.elasticsearch.node" level="INFO" />
 	<logger name="io.vertx" level="INFO"/>
 	<logger name="com.gentics" level="INFO"/>
-	<logger name="org.elasticsearch" level="ERROR"/>
-	<logger name="ch.qos" level="ERROR"/>
 	<root level="ERROR">
 		<appender-ref ref="STDOUT"/>
 	</root>
