@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration>
+<configuration scan="true" scanPeriod="30 seconds">
 
 	<conversionRule conversionWord="meshName"
 		converterClass="com.gentics.mesh.log.MeshLogNameConverter"/>
