@@ -28,6 +28,8 @@ title: Changelog
 [[v0.31.4]]
 == 0.31.4 (TBD)
 
+icon:plus[] Logging:  The default `logback.xml` file has been updated to include automatic scan of the logging configuration. This change will not be applied to existing configurations.
+
 icon:check[] Schema: It is now possible to reset the `allow` property of string fields. Setting the `allow` to empty array will now no longer restrict the values. Instead it will revert back to the original behaviour and allow all values.
 
 [[v0.31.3]]
